	  files, `mysql_qcache.rrd' and `mysql_threads.rrd'.
	* The `cpufreq' plugin now reads another file since the file it did
	  read so far causes much overhead in the kernel. Also, you need root
	  to read the old file, but not to read the new one.
	* The `hddtemp' plugin can now be configured to connect to another
	  address and/or port than localhost.

2006-01-24, Version 3.6.2
	* Due to a bug in the configfile handling collectd wouldn't start in
	  client mode. This released fixes this.

2006-01-20, Version 3.6.1
	* Due to a bug in `configure.in' all modules and the binary were
	  linked against `libmysqlclient'. This issue is solved by this
	  release.

2006-01-17, Version 3.6.0
	* A config file has been added. This allows for loading only specific
	  plugins.
	* A `df' plugin has been added.
	* A `mysql' plugin has been added.
	* The `ping' plugin doesn't entirely give up hope when a socket error
	  occured, but will back of and increase the intervals between tries.

2006-01-21, Version 3.5.2
	* Fixed yet another bug in the signal handling.. Stupid typo..
	* Improved the ping plugin to not give up on socket errors (backport
	  from 3.6.0).

2005-12-18, Version 3.5.1
	* The PID-file is now deleted correctly when shutting down the daemon.
	* SIGINT and SIGTERM are now handled correctly.

2005-12-16, Version 3.5.0 (Revision 326)
	* A bug in the `load' module under Solaris has been fixed.
	* The `users' module has been contributed by Sebastian Harl. It counts
	  currently logged in users.
	* The CPU module now works under FreeBSD without the use of
	  `libstatgrab', however SMP support is missing.
	* The default directories for the RRD files and the PID file now
	  depend on the compile time setting of `localstatedir'.

2005-11-15, Version 3.4.0 (Revision 236)
	* A PID-file is written to /var/run upon startup. Thanks to `Tommie'
	  from gentoo's bugzilla for writing the patch.
	* The build dependency for librrd has been removed. Binaries built